# Person-Detection-ESP32-EYE

./: LICENSE  README.md  idf_component.yml  resultados.csv  sdkconfig  sdkconfig.old
main/: detection_responder.cc  esp_cli.c  esp_main.h  image_provider.cc  main.cc  main_functions.cc
static_images/: CMakeLists.txt
static_images/sample_images/: image10  image11  image12  image13  image14  image15  image16  image17  image18  image19  image20  image21  image22  image23  image24  image25  image26  image27  image28  image29  image30  image31  image32  image33  image34  image35  image36  image37  image38  image39  image40  image41  image42  image43  image44  image45  image46  image47  image48  image49  (+1 more)
