
#
# Main component of TF Micro project 'person_detection'.
#

idf_component_register(
    SRCS ""
    INCLUDE_DIRS ""
    EMBED_FILES "sample_images/image0" 
                "sample_images/image1"
                "sample_images/image2"
                "sample_images/image3"
                "sample_images/image4"
                "sample_images/image5"
                "sample_images/image6"
                "sample_images/image7"
                "sample_images/image8"
                "sample_images/image9"
                "sample_images/image10"
                "sample_images/image11"
                "sample_images/image12"
                "sample_images/image13"
                "sample_images/image14"
                "sample_images/image15"
                "sample_images/image16"
                "sample_images/image17"
                "sample_images/image18"
                "sample_images/image19"
                "sample_images/image20"
                "sample_images/image21"
                "sample_images/image22"
                "sample_images/image23"
                "sample_images/image24"
                "sample_images/image25"
                "sample_images/image26"
                "sample_images/image27"
                "sample_images/image28"
                "sample_images/image29"
                "sample_images/image30"
                "sample_images/image31"
                "sample_images/image32"
                "sample_images/image33"
                "sample_images/image34"
                "sample_images/image35"
                "sample_images/image36"
                "sample_images/image37"
                "sample_images/image38"
                "sample_images/image39"
                "sample_images/image40"
                "sample_images/image41"
                "sample_images/image42"
                "sample_images/image43"
                "sample_images/image44"
                "sample_images/image45"
                "sample_images/image46"
                "sample_images/image47"
                "sample_images/image48"
                "sample_images/image49"
                "sample_images/image50" )


                